Resolves: tdf#99425 crash when closing dialog editor

with undocked "Object Catalog" toolbar

Change-Id: I70d51cec699333c5cfc1461d61734c1bbb5323da
(cherry picked from commit 4f92eb777ab17e0a2ee478572a46d060742902e1)
Reviewed-on: https://gerrit.libreoffice.org/24281
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>